--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>메이플 사냥터 계산</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <title>버닝필드 - 메이플 사냥터 효율</title>
   </head>
   <body>
     <div id="root"></div>
