--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-adsense-account" content="ca-pub-2888163582859915">
+    <meta name="google-adsense-account" content="ca-pub-2888163582859915" />
+
+    <meta
+      name="Description"
+      content="메이플스토리의 사냥 컨텐츠로 획득 가능한 경험치의 효율 계산 서비스. 폴로, 프리토, VIP 쿠폰, 이벤트 스킬등의 정보를 제공합니다."
+    />
+    <meta
+      name="Keywords"
+      content="버닝필드, 메이플스토리, 메이플, 메이플 사냥터, 메이플 버닝필드, 큐브사용내역, 폴로, 프리토, VIP 쿠폰, 재획"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mapleburningfield.com" />
+    <meta property="og:title" content="버닝필드 - 메이플 사냥터 효율" />
+    <meta property="og:image" content="./images/og_image.png" />
+    <meta
+      property="og:description"
+      content="메이플스토리의 사냥 컨텐츠로 획득 가능한 경험치의 효율을 계산 서비스. 폴로, 프리토, VIP쿠폰, 이벤트 스킬등의 정보를 제공합니다."
+    />
+    <meta property="og:site_name" content="버닝필드 - 메이플 사냥터 효율" />
+    <meta property="og:locale" content="ko_KR" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2888163582859915"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
