--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-2888163582859915" />
+    <meta name="robots" content="index, follow" />
 
     <meta
       name="Description"
@@ -13,6 +14,10 @@
       name="Keywords"
       content="버닝필드, 메이플스토리, 메이플, 메이플 사냥터, 메이플 버닝필드, 큐브사용내역, 폴로, 프리토, VIP 쿠폰, 재획"
     />
+
+    <meta http-equiv="Title" content="메이플스토리 버닝필드" />
+    <meta http-equiv="Subject" content="메이플스토리 사냥 정보" />
+
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mapleburningfield.com" />
     <meta property="og:title" content="버닝필드 - 메이플 사냥터 효율" />
