--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-2888163582859915" />
+    <meta
+      name="google-site-verification"
+      content="uwYM47hSy2R9GV_YUZwCZ5BOxDEnWG2hhwZEsFBNC8A"
+    />
     <meta name="robots" content="index, follow" />
 
     <meta
